syntax = "proto3";

import "message.proto";
import "poll.proto";
import "business.proto";
import "reaction.proto";
import "inline_query.proto";
import "chosen_inline_result.proto";
import "callback_query.proto";
import "shipping_query.proto";
import "pre_checkout_query.proto";
import "paid_media_purchased.proto";
import "chat_member.proto";
import "chat_join_request.proto";
import "chat_boost.proto";

message update {
  int64 update_id = 1;
  optional message message = 2;
  optional message edited_message = 3;
  optional message channel_post = 4;
  optional message edited_channel_post = 5;
  optional business_connection business_connection = 6;
  optional message business_message = 7;
  optional message edited_business_message = 8;
  optional business_messages_deleted deleted_business_messages = 9;
  optional message_reaction_updated message_reaction = 10;
  optional message_reaction_count_updated message_reaction_count = 11;
  optional inline_query inline_query = 12;
  optional chosen_inline_result chosen_inline_result = 13;
  optional callback_query callback_query = 14;
  optional shipping_query shipping_query = 15;
  optional pre_checkout_query pre_checkout_query = 16;
  optional paid_media_purchased purchased_paid_media = 17;
  optional poll poll = 18;
  optional poll_answer poll_answer = 19;
  optional chat_member_updated my_chat_member = 20;
  optional chat_member_updated chat_member = 21;
  optional chat_join_request chat_join_request = 22;
  optional chat_boost_updated chat_boost = 23;
  optional chat_boost_removed removed_chat_boost = 24;
}